--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<title>vim cheats_sheets</title>
 	
 	<!-- favicon -->	
-	<link rel=icon href="images/vim.png" sizes="32x32 48x48" type="image/png">
+	<link rel=icon href="images/git.png" sizes="32x32 48x48" type="image/png">
 
 
 	<!-- link css pour plus tard
@@ -62,183 +62,7 @@
 		</article>	
 		<article>
 			<h2>VIM-PLUG</h2>
-<p>Liens :</p>    
-	<p><a href="https://vimawesome.com">vimawesome</a></p>
-	<p><a href="https://github.com/junegunn/vim-plug">github vim-plug</a></p>
-			<h3>1 ÈRE INSTALLATION</h3>  
-<p><strong>Installer GIT:</strong></p>   
-	<p><mark>$ sudo apt install git</mark></p>   
-<p><strong>Installer CURL:</strong></p>
-	<p><mark> $ sudo apt install curl</mark></p>
-<p><strong>Dans un terminal saisir :</strong></p>  
-	<p><mark>curl -fLo ~/.vim/autoload/plug.vim --create-dirs \</mark></p>
-	<p><mark>https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim</mark></p>
-<p>Créer, si pas fait, le fichier [ ~/.vimrc ]</p> 
- 	<p><mark>$ vim .vimrc</mark></p>
-<p><b>Insérer au début du fichier les lignes suivantes :</b></p>
-	<p><mark>call plug#begin()</mark></p>
-	<p><mark>call plug#end()</mark></p>
-	<h3>A chaque nouvel de plugin, il faudra mettre une ligne qui ressemble à la suivante entre les 2 précédentes :</h3>
-	<p><mark>call plug#begin()</mark></p>
-	<p><mark>Plug ‘blablablabla’</mark></p>
-	<p><mark>call plug#end()</mark></p>
-	<h3>Ajouter un Plugin</h3>
-<p>RDV chez <a href="https://vimawesome.com">vim awesome.com</a></p>
-<p><strong>Chercher un plugin et faire ce qui est dit :</strong></p>
-<p><ol>
-	<li>insérer la ligne qui dit <em>Plug ‘blablabla’</em>  dans le fichier [ .vimrc ]</li>
-	<li>enregistrer avec <em>:w</em></li>
-	<li>forcer la lecture du fichier de configuration avec <em>:source %</em> installer avec <em>:PlugInstall</em></li>
-</ol></p>
-		<h4>AU BESOIN :</h4>  
-<p>Pour mettre à jour les plugins ....... <mark><em>:PlugUpdate</em></mark></p>  
-<p>Pour supprimer les plugins .......... <mark><em>:PlugClean</em></mark></p>
-<p>Voir le status des plugins ............. <mark><em>:PlugStatus</em></mark></p>
-		<h5>Mais encore...</h5>  
-<p>Ce qui est sympa avec Vim-plug est que l’on peut mettre des conditions dans les plugins</p>  
-<p><mark>Plug 'SirVer/ultisnips' | Plug 'honza/vim-snippets'</mark></p>
-<p>ici vim-snippets dépends de ultisnips</p>
-<p>On charge paresseusement les plugins</p>
-<p><mark>Plug 'StanAngeloff/php.vim', { 'for': 'php' }</mark></p>
-<p>Je n’ai besoin du plugin php-vim que si j’utilise un fichier PHP.</p>
-<p><mark>Plug 'scrooloose/nerdtree', { 'on':</mark></p>
-<p>Je charge le plugin que si je l’appelle.</p>
-<p>'NERDTreeToggle' }</p>
-		</article>
-		<article>
-		<h3>Quelques Commandes</h3> 
-		<table>
-			<tr>
-				<th>Commande</th> 
-				<th>Description</th>
-				<th>(terme anglais)</th>
-			</tr>
-			<tr>
-				<td>a</td>
-				<td>Entre en mode insertion apres le curseur</td>	
- 				<td> </td>
- 			</tr>
- 			<tr>
-				<td>A</td>
-				<td>Entre en mode insertion sur le dernier caractère</td>	
- 				<td> </td>
- 			</tr>		
-			<tr> 
-				<td>i</td>
-				<td>Entre en mode insertion au niveau du curseur</td>
-				<td>insert</td>
-			</tr>
-			<tr>	
-				<td>h</td>
-				<td>Se déplacer vers la gauche</td>
-				<td> </td>
-			</tr>
-			<tr>
-				<td>j</td>
-				<td>Se déplacer vers le bas</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>k</td>
-				<td>Se déplacer vers le haut </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>l</td>
-				<td>Se déplacer vers la droite</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>$</td>
-				<td>Aller en fin de ligne</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>gg</td>
-				<td>aller en debut de document</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>G</td>
-				<td>aller en fin de document</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>v</td>
-				<td>Entre en mode visuel</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>"echap"</td>
-				<td>Entre en mode normal </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>":"</td>
-				<td>Entre en mode commande</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>x</td>
-				<td>suprime Le caractère sous le curseur</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>dd</td>
-				<td>Suprime la ligne sous le curseur</td>
-				<td>delet</td>
-			</tr>	             
-			<tr>
-				<td>dw</td>
-				<td>Suprime le mot sur le curseur</td>
-				<td>delet word</td>
-			</tr>
-			<tr>
-				<td>u</td>
-				<td>Annulation de la dernière action </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>yy</td>
-				<td>Copie une ligne</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>yw</td>
-				<td>Copie un mot</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>p</td>
-				<td>Coller</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>:w</td>
-				<td>Sauvergarder</td>
-				<td>write</td>
-			</tr>
-			<tr>
-				<td>:q</td>
-				<td>Quitter</td>
-				<td>exit</td>
-			</tr>
-			<tr>
-				<td>:q!</td>
-				<td>Quitter sans enregistrer</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>:wq</td>
-				<td>Quitter et enregistrer</td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>~</td>
-				<td>Inverse la casse de la lettre sous le curseur</td>
-				<td></td>
-			</tr>
-		</table>
+
 		</article>
 	</section>
 	<br/><br/><br/><br/>
