--- a/html/about.html
+++ b/html/about.html
@@ -13,7 +13,7 @@
 	<title>Vim Cheats Sheets</title>
 	
 	<!-- favicon -->	
-	<link rel=icon href="../images/vim.png" sizes="32x32 48x48" type="image/png">
+	<link rel=icon href="../images/git.png" sizes="32x32 48x48" type="image/png">
 
 
 	<!-- link css pour plus tard
@@ -51,25 +51,7 @@
 	<section>
 <h3>Ce que Vim peut faire</h3>
 		<article>
-<p>Vim est un éditeur de texte avancé qui cherche à fournir la puissance de l'éditeur de facto Unix, "Vi", avec un ensemble de fonctionnalités plus complet. C'est utile si vous utilisez déjà vi ou utilisez un éditeur différent .</p>
-<h4>Qu'est-ce que Vim?</h4>
-<p>Vim est un éditeur de texte hautement configurable conçu pour permettre une édition de texte efficace. Il s'agit d'une version améliorée de l'éditeur vi distribué avec la plupart des systèmes UNIX.</p>
-
-<p>Vim est souvent appelé un "éditeur de programmeur" et est tellement utile pour la programmation que beaucoup le considèrent comme un IDE complet. Ce n'est pas seulement pour les programmeurs, cependant. Vim convient parfaitement à tous les types d’édition de texte, de rédaction d’e-mails à la modification de fichiers de configuration.</p>
-
-<p>Vim peut être configuré pour fonctionner de manière très simple (du type bloc-notes), appelée evim ou Easy Vim.</p>
-<h5>Qu'est-ce que Vim n'est pas?</h5>
-
-<p>Vim n'est pas un éditeur conçu pour tenir les mains de ses utilisateurs. C'est un outil dont l'utilisation doit être apprise.</p>
-
-<p>Vim n'est pas un traitement de texte. Bien qu'il puisse afficher du texte avec différentes formes de surbrillance et de formatage, il n'est pas là pour permettre l'édition WYSIWYG de documents composés. (Mais c'est bien pour éditer TeX.)</p>
-
-<p>Vim est un organisme de bienfaisance. Sa licence est compatible avec la GPL, donc elle est distribuée librement, mais nous vous demandons, si cela vous est utile, de faire un don pour aider les enfants en Ouganda par le biais de l' ICCF . Le texte complet de la licence est disponible dans la documentation . Beaucoup plus d'informations sur charityware</p>
-
-<p>Si toute cette information est écrasante, essayez une dose plus faible. Nous pouvons exposer les merveilles de vim en seulement six kilo - octets - et dans plus de langues que vous ne pouvez le faire!</p>
-<h6>Témoignages</h6>
-
-<p>Ne me croyez pas sur parole! Lisez ce que d’ autres ont dit à propos de Vim.</p> 
+ 
 		</article>	
 		
 	</section>
