--- a/html/license.html
+++ b/html/license.html
@@ -13,7 +13,7 @@
 	<title>Vim Cheats Sheets</title>
 	
 	<!-- favicon -->	
-	<link rel=icon href="../images/vim.png" sizes="32x32 48x48" type="image/png">
+	<link rel=icon href="../images/git.png" sizes="32x32 48x48" type="image/png">
 
 
 	<!-- link css pour plus tard
