ajout de code dans index.html

--- a/html/license.html
+++ b/html/license.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="">
 
 	<!--  tittle -->
-	<title>Vim Cheats Sheets</title>
+	<title>GitCheats Sheets</title>
 	
 	<!-- favicon -->	
 	<link rel=icon href="../images/git.png" sizes="32x32 48x48" type="image/png">
