modif de about.html

--- a/html/about.html
+++ b/html/about.html
@@ -49,9 +49,17 @@
 	</nav>
 	<hr>	
 	<section>
-<h3>Ce que Vim peut faire</h3>
+<h3> Les bases de Git</h3>
 		<article>
- 
+			<p>Alors, qu'est-ce que Git en un mot?</p>
+ <p>C’est une section importante à assimiler, car si vous comprenez ce que Git est et quels sont les principes fondamentaux de son</p>
+ <p>fonctionnement, l’utiliser efficacement sera probablement beaucoup plus facile pour vous. Cela vous évitera une confusion subtile lors</p><p> de l’utilisation de l’outil. Même si l’interface utilisateur de Git est assez similaire à ces autres VCS, Git stocke et pense les</p>
+ <p>informations d’une manière très différente, et comprendre ces différences vous aidera à ne pas vous tromper.</p>
+		</article>
+		<article>
+			<p>Git est un système de contrôle de version distribué gratuit et à source ouverte, conçu pour gérer tout projet, du plus petit au plus grand, avec rapidité et efficacité.</p>
+
+<p>Git est facile à apprendre et a une empreinte minuscule avec des performances rapides. Il surclasse les outils SCM tels que Subversion, CVS, Perforce et ClearCase avec des fonctionnalités telles que la création de branches économiques à bas prix, des zones de transfert et des flux de travail multiples.</p>
 		</article>	
 		
 	</section>
