--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 		<h2>Installer Git</h2>
 		<article>
 			<p><code><mark>$ sudo apt-get install git</mark></code></p>		
-		</article>	
+		</article>
+		<br />	
 		<article>
 			<h3>Configuration</h3>
 			<p>Définir le nom que l'on veut pour faire nos Commits</p>
@@ -66,6 +67,7 @@
 			<p>Active la colorisation </p>
 			<p><code><mark>$ git config --global color.ui auto</mark></code></p>
 		</article>
+		<br />
 		<article>
 			<h4>créer des repositories</h4>
 			<p>Crée un nouveau référentiel local avec le nom spécifié</p>
@@ -73,8 +75,9 @@
 			<p>Télécharge un projet et l'historique complet de ses versions</p>
 			<p><code><mark>$ git clone [url]</mark></code></p>
 		</article>
+		<br />
 		<article>
-			<h5>ligne de commande</h5>
+			<h4>ligne de commande</h4>
 			<p>ajouter un ou des fichiers</p>
 			<p><code><mark>git add [path + nom du fichier]</mark></code></p>
 			<p>Ajouter tous les fichiers modifiés :</p>
@@ -95,8 +98,13 @@
 			<p>récuperer le contenu d'une branche sur le remote</p>
 			<p><code><mark>git pull origin [ma-branch]</mark></code></p>
 		</article>
+		<br />
 		<article>
+			<h4>Faire des changements</h4>
 			<p>Répertorie tous les fichiers nouveaux ou modifiés à valider</p>
+			<p><code><mark>$ git status</mark></code></p>
+			<p>Instantanés du fichier en préparation du contrôle de version</p>
+			<p><code><mark>$ git add [file]</mark></code></p>
 		</article>
 	</section>
 	<br/><br/><br/><br/>
