add image  about.html

--- a/html/about.html
+++ b/html/about.html
@@ -51,6 +51,10 @@
 	<section>
 <h3> Les bases de Git</h3>
 		<article>
+			<figure>
+				<img src="../images/git-plan.gif" alt="Git screenshot the A-team" title="Git screenshot the A-team">
+				<figcaption>Git screenshot the A-team</figcaption>
+			</figure>
 			<p>Alors, qu'est-ce que Git en un mot?</p>
  <p>C’est une section importante à assimiler, car si vous comprenez ce que Git est et quels sont les principes fondamentaux de son</p>
  <p>fonctionnement, l’utiliser efficacement sera probablement beaucoup plus facile pour vous. Cela vous évitera une confusion subtile lors</p><p> de l’utilisation de l’outil. Même si l’interface utilisateur de Git est assez similaire à ces autres VCS, Git stocke et pense les</p>
